dataset1235/2025-2/2868285114/users/154215138/executions/3792430146_4093783519.log
== RUN (2025-09-02 22:49:29)
-- CODE: 
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: "))

if num % 2 == 0: 
    mensagem = "sim"
else: 
    mensagem = "nao"
  
print(mensagem.lower())

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
---- user output:
Digite um numero: sim
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
---- user output:
Digite um numero: sim
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
---- user output:
Digite um numero: sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:44:01)
-- CODE: 
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = input("Digite um numero: ")

if num % 2 == 0:
	print("sim")
else:
	print("nao")


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0:
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0:
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0:
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0:
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0:
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0:
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:49:21)
-- CODE: 
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(Input("Digite um numero: "))

if num % 2 == 0: 
    mensagem = "sim"
else: 
    mensagem = "nao"
  
print(mensagem.lower())

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    num = int(Input("Digite um numero: "))
              ^^^^^
NameError: name 'Input' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    num = int(Input("Digite um numero: "))
              ^^^^^
NameError: name 'Input' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    num = int(Input("Digite um numero: "))
              ^^^^^
NameError: name 'Input' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    num = int(Input("Digite um numero: "))
              ^^^^^
NameError: name 'Input' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    num = int(Input("Digite um numero: "))
              ^^^^^
NameError: name 'Input' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    num = int(Input("Digite um numero: "))
              ^^^^^
NameError: name 'Input' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:49:51)
-- CODE: 
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = int(input("Digite um numero: "))

if num % 2 == 0: 
    mensagem = "sim"
else: 
    mensagem = "nao"
  
print(mensagem.lower())

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
---- user output:
Digite um numero: sim
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
---- user output:
Digite um numero: nao
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
---- user output:
Digite um numero: sim
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
---- user output:
Digite um numero: sim
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:48:06)
-- CODE: 
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = input("Digite um numero: ")

if num % 2 == 0: 
    mensagem = "sim"
else: 
    mensagem = "nao"
  
print(mensagem.lower())

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0: 
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0: 
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0: 
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0: 
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0: 
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0: 
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:45:38)
-- CODE: 
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = input("Digite um numero: ")

if num % 2 == 0: 
  print("sim")
else: 
  print("nao")


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0: 
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0: 
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0: 
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0: 
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0: 
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0: 
       ~~~~^~~
TypeError: not all arguments converted during string formatting
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:45:40)
-- CODE: 
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = input("Digite um numero: ")

if num % 2 == 0: 
  print("sim")
else: 
  print("nao")


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0: 
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0: 
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0: 
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0: 
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0: 
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0: 
       ~~~~^~~
TypeError: not all arguments converted during string formatting
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:44:03)
-- CODE: 
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = input("Digite um numero: ")

if num % 2 == 0:
	print("sim")
else:
	print("nao")


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0:
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0:
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0:
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0:
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0:
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0:
       ~~~~^~~
TypeError: not all arguments converted during string formatting
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:42:07)
-- CODE: 
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = input("Digite um numero: ")

if num % 2 == 0:
	mensagem = "sim"
else:
	mensagem = "nao"

print(mensagem.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0:
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0:
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0:
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0:
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0:
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0:
       ~~~~^~~
TypeError: not all arguments converted during string formatting
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:47:00)
-- CODE: 
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = input("Digite um numero: ")

if num % 2 == 0: 
  mensagem = "sim"
else: 
  mensagem = "nao"
print(mensagem.lower())

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0: 
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0: 
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0: 
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0: 
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0: 
       ~~~~^~~
TypeError: not all arguments converted during string formatting
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if num % 2 == 0: 
       ~~~~^~~
TypeError: not all arguments converted during string formatting
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
